# link

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  podcasts.db  pyproject.toml
src/core/: database.py
src/models/: podcast.py  youtube.py
src/routes/: podcasts.py
src/services/: spotify_service.py  youtube_service.py
src/utils/: aula.json  bibliotecas.json  livros.json  podcast.json
